# dasheng

./: .gitignore  LICENSE  README.md  pyproject.toml
dasheng/: __init__.py
dasheng/prepare/: wavlist_to_tar.py
dasheng/pretrained/: pretrained.py
dasheng/train/: audiowebdataset.py  models.py  train.py  utils.py
dasheng/train/config/: dasheng_06B.yaml  dasheng_12B.yaml  dasheng_base.yaml
